--- a/TODO
+++ b/TODO
@@ -6,18 +6,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Update version and revision in CMakeLists.txt
 
 * v0.0.0-2 (05 Jul. 2022 - ???)
-- (3) Add New and Open menu commands to File menu
+- (4) Add MainWindow's open callback
+- Add New and Open menu commands to File menu
 - Add File menubar and title to editor's MainWindow
 - Updated Doxyfile.in for doxygen 1.9.3
-
-=== TODO
-
-This is a project I dreamed about. A C++ FOX-based application that can be used
-to edit a list of inter-dependent tables and fields. All this is saved in a
-one-file project file.
-
-Then, we can generate a client-server app based on a C++ backend and a modern
-electron frontend that can be used to modify the tables/fields.
-
-If the resulting application must be compiled, it can be from the FOX-based
-editor application.
