--- a/TODO
+++ b/TODO
@@ -6,7 +6,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Update version and revision in CMakeLists.txt
 
 * v0.0.0-2 (05 Jul. 2022 - ???)
-- (4) Add MainWindow's open callback
+- (5) Add a file/quit menu item
+- Add MainWindow's open callback
 - Add New and Open menu commands to File menu
 - Add File menubar and title to editor's MainWindow
 - Updated Doxyfile.in for doxygen 1.9.3
