--- a/TODO
+++ b/TODO
@@ -4,13 +4,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
 === ChangeLog ===
     (8 items per revision)
     Update version and revision in CMakeLists.txt
+    Create a new git tag and pull --tags for each revision commit
 
-* v0.0.0-2 (05 Jul. 2022 - ???)
-- (8) Start to implement ProjectFile and its filename member
-- Cmake search for and link editor executable with boost serialzation
-- Open menu item shows a file dialog
-- Add a file/quit menu item
-- Add MainWindow's open callback
-- Add New and Open menu commands to File menu
-- Add File menubar and title to editor's MainWindow
-- Updated Doxyfile.in for doxygen 1.9.3
+* v0.0.0-3 (15 Jul. 2022 - ???)
+
