--- a/TODO
+++ b/TODO
@@ -7,4 +7,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Create a new git tag and pull --tags for each revision commit
 
 * v0.0.0-3 (15 Jul. 2022 - ???)
-- (1) Implement ProjectFile::setFilename() and unit test
+- (2) Add the project menu pane to MainWindow
+- Implement ProjectFile::setFilename() and unit test
