--- a/TODO
+++ b/TODO
@@ -8,4 +8,4 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.0-4 (08 Aug. 2022 - ???) SLCO ???
-
+- (1) Add File/New menu icon
