--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.0-4 (08 Aug. 2022 - ???) SLCO ???
-- (5) Add Project Icon list item icon
+- (6) Add a collection IconListItem with big icon
+- Add Project Icon list item icon
 - Add file/open icon
 - Make the default Makefile rule depends on icons one
 - Makefile's check rule now depends the icons one to fix CI
