--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.0-5 (26 Aug. 2022 - ???) SLOC ???
-- (7) Improve documentation about dot/graphviz need and ProjectFile class
+- (8) Improve MainWindow class doxygen documentation
+- Improve documentation about dot/graphviz need and ProjectFile class
 - Add descrption FXText widget
 - Add multiple textfields to project details
 - Add project anme text field to project detail pane
