--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.0-5 (26 Aug. 2022 - ???) SLOC ???
-- (6) Add descrption FXText widget
+- (7) Got the project descrption changed event
+- Add descrption FXText widget
 - Add multiple textfields to project details
 - Add project anme text field to project detail pane
 - Add logger's FXList and add message function
