--- a/TODO
+++ b/TODO
@@ -8,4 +8,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.0-6 (06 Sep. 2022 - ???) SLOC ???
-- (1) Got the project descrption changed event
+- (2) Changing project details or description set dirty flag and update title
+- Got the project descrption changed event
