--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.0-6 (06 Sep. 2022 - ???) SLOC ???
-- (6) Fix a CI issue using apt-get tp update package list
+- (7) Set default extension for both open and save as dialogs
+- Fix a CI issue using apt-get tp update package list
 - ProjectFile has a FXString filename setter
 - Add Save As event handler
 - Add recent files menu handling code
