--- a/TODO
+++ b/TODO
@@ -7,8 +7,9 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Create a new git tag and pull --tags for each revision commit
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
-* v0.0.0-6 (06 Sep. 2022 - ???) SLOC ???
-- (7) Set default extension for both open and save as dialogs
+* v0.0.1-6 (06 Sep. 2022 - ???) SLOC ???
+- (8) Bump version to 0.0.1 (closed 5 ROADMAP sections)
+- Set default extension for both open and save as dialogs
 - Fix a CI issue using apt-get tp update package list
 - ProjectFile has a FXString filename setter
 - Add Save As event handler
