Switch to revision 6
- Bump version to 0.0.1 (closed 5 ROADMAP sections)
- Set default extension for both open and save as dialogs
- Fix a CI issue using apt-get tp update package list
- ProjectFile has a FXString filename setter
- Add Save As event handler
- Add recent files menu handling code
- Changing project details or description set dirty flag and update title
- Got the project descrption changed event

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.1-6 (06 Sep. 2022 - 21 Sep. 2022) SLOC 801
+- Bump version to 0.0.1 (closed 5 ROADMAP sections)
+- Set default extension for both open and save as dialogs
+- Fix a CI issue using apt-get tp update package list
+- ProjectFile has a FXString filename setter
+- Add Save As event handler
+- Add recent files menu handling code
+- Changing project details or description set dirty flag and update title
+- Got the project descrption changed event
+
 * v0.0.0-5 (26 Aug. 2022 - 06 Sep. 2022) SLOC 720
 - Improve MainWindow class doxygen documentation
 - Improve documentation about dot/graphviz need and ProjectFile class
