--- a/TODO
+++ b/TODO
@@ -8,4 +8,4 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-8 (10 Oct. 2022 - ???) SLOC ???
-
+- (1) Improve doxygen documentation with mainpage and undocumented members fix
