--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-8 (10 Oct. 2022 - ???) SLOC ???
-- (2) Add generator pane with output filename textfield
+- (3) Add the generator path button callback
+- Add generator pane with output filename textfield
 - Improve doxygen documentation with mainpage and undocumented members fix
