Generator::getOutputDir implementation

--- a/TODO
+++ b/TODO
@@ -8,7 +8,9 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-8 (10 Oct. 2022 - ???) SLOC ???
-- (6) Add a warning dialog as pre-generation check
+- (8) Generator::getOutputDir implementation
+- Add a bastc Generator abstract type
+- Add a warning dialog as pre-generation check
 - Reenable project menu actions and connect callbacks
 - Make the generator output dir selection work
 - Add the generator path button callback
