--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-9 (01 Nov. 2022 - ???) SLOC ?,???
-- (2) Generator::setOutputDir implementation
+- (3) Add a GeneratorV1 class
+- Generator::setOutputDir implementation
 - Close a panel-related ROADMAP section
 
