--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-9 (01 Nov. 2022 - ???) SLOC ?,???
-- (7) Add the variables map to Genetator abstract class
+- (8) Generator::addVariable test and implementation
+- Add the variables map to Genetator abstract class
 - Implement Generator's mkdri and rmdir methods
 - Add two directory-related failing tests
 - Generator can check if a directory exists
