--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.1-9 (01 Nov. 2022 - 17 Nov. 2022) SLOC 1,217
+- Generator::addVariable test and implementation
+- Add the variables map to Genetator abstract class
+- Implement Generator's mkdri and rmdir methods
+- Add two directory-related failing tests
+- Generator can check if a directory exists
+- Add a GeneratorV1 class
+- Generator::setOutputDir implementation
+- Close a panel-related ROADMAP section
+
 * v0.0.1-8 (10 Oct. 2022 - 01 Nov. 2022) SLOC 1,044
 - Generator::getOutputDir implementation
 - Add a bastc Generator abstract type
