--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-10 (17 Nov. 2022 - ???) SLOC ?,???
-- (2) Fix generator panel label width
+- (3) Add a failing test for inde.html copied file
+- Fix generator panel label width
 - replace_var method implementation
