--- a/TODO
+++ b/TODO
@@ -8,4 +8,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-11 (27 Dec. 2022 - ???) SLOC ?,???
-- (1) Fix some Generator UT using getline instead of stream operator
+- (2) Move complete index copying test to GeneratorV1
+- Fix some Generator UT using getline instead of stream operator
