Better Generator::removeDirectory error reporting if content

--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-11 (27 Dec. 2022 - ???) SLOC ?,???
-- (4) GeneratorV1::generate implementation
+- (5) Better Generator::removeDirectory error reporting if content
+- GeneratorV1::generate implementation
 - Basic Generator::getFileContent and copyFile implementation
 - Move complete index copying test to GeneratorV1
 - Fix some Generator UT using getline instead of stream operator
