--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-11 (27 Dec. 2022 - ???) SLOC ?,???
-- (6) Fix directory suppression using stx::experimental remove_all
+- (7) Improve editor's pre-generation checks 
+- Fix directory suppression using stx::experimental remove_all
 - Better Generator::removeDirectory error reporting if content
 - GeneratorV1::generate implementation
 - Basic Generator::getFileContent and copyFile implementation
