--- a/TODO
+++ b/TODO
@@ -8,4 +8,4 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-12 (10 Feb. 2023 - ???) SLOC ?,???
-
+- (1) Fix failing APPNAME test in package.json
