Improve MainWindow's doxygen documentation

--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-12 (10 Feb. 2023 - ???) SLOC ?,???
-- (2) Now replaces vars with curly brackets
+- (3) Improve MainWindow's doxygen documentation
+- Now replaces vars with curly brackets
 - Fix failing APPNAME test in package.json
