--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-12 (10 Feb. 2023 - ???) SLOC ?,???
-- (3) Improve MainWindow's doxygen documentation
+- (4) MainWindow::onFileOpen uses ProjectFile::setFilename
+- Improve MainWindow's doxygen documentation
 - Now replaces vars with curly brackets
 - Fix failing APPNAME test in package.json
