--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.1-13 (17 Mar. 2023 - ???) SLOC ?,???
-- (5) Add a Generator test for src/main.js presence in generated dir
+- (6) Copy main.js to generated app and remove chore refrerences
+- Add a Generator test for src/main.js presence in generated dir
 - List to-be-saved MainWindow fields in ROADMAP
 - Implement ProjectFile's dirty flag
 - Remove boost serialization dependency cause we're using fox one
