--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-13 (17 Mar. 2023 - ???) SLOC ?,???
-- (7) Add npm install call option to editor's generator pane
+- (8) Editor's MainWindow uses ProjectFile's dirty flag
+- Add npm install call option to editor's generator pane
   and bump version to 0.0.2
 - Copy main.js to generated app and remove chore refrerences
 - Add a Generator test for src/main.js presence in generated dir
