--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+* v0.0.2-13 (17 Mar. 2023 - 24 Apr. 2023) SLOC 1,716
+- Editor's MainWindow uses ProjectFile's dirty flag
+- Add npm install call option to editor's generator pane
+  and bump version to 0.0.2
+- Copy main.js to generated app and remove chore refrerences
+- Add a Generator test for src/main.js presence in generated dir
+- List to-be-saved MainWindow fields in ROADMAP
+- Implement ProjectFile's dirty flag
+- Remove boost serialization dependency cause we're using fox one
+- Add TestableGenerator.hpp to doxygen EXCLUDE list
+
 * v0.0.1-12 (10 Feb. 2023 - 17 Mar. 2023) SLOC 1,658
 - Fix the previous unit tests
 - Add failing ProjectFile::load unit tests
