--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-14 (24 Apr. 2023 - ???) SLOC ?,???
-- (2) Serialize project name and finally fix related unit tests
+- (3) Close a project file serialization related ROADMAP section
+- Serialize project name and finally fix related unit tests
 - Add failing test for ProjectFile's project name field
