--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-14 (24 Apr. 2023 - ???) SLOC ?,???
-- (5) Multiple to-be-generated app node modules update
+- (6) Loading a file enable the File>save MenuCommand
+- Multiple to-be-generated app node modules update
 - Add ProjectAuthor unit test
 - Close a project file serialization related ROADMAP section
 - Serialize project name and finally fix related unit tests
