--- a/TODO
+++ b/TODO
@@ -7,12 +7,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Create a new git tag and pull --tags for each revision commit
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
-* v0.0.2-14 (24 Apr. 2023 - ???) SLOC ?,???
-- (8) Add the failing generator filename projectfile test
-- Loading a project file set project name in editor
-- Loading a file enable the File>save MenuCommand
-- Multiple to-be-generated app node modules update
-- Add ProjectAuthor unit test
-- Close a project file serialization related ROADMAP section
-- Serialize project name and finally fix related unit tests
-- Add failing test for ProjectFile's project name field
+* v0.0.2-15 (18 Mai. 2023 - ???) SLOC ?,???
+
