--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-15 (18 Mai. 2023 - ???) SLOC ?,???
-- (2) Improve Project API documentation
+- (3) MainWindow update UI fields from loaded project file
+- Improve Project API documentation
 - Implement generator filename save and load to fix failing test
