Naive MainWindow's save and saveAs callback implementation

--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-15 (18 Mai. 2023 - ???) SLOC ?,???
-- (3) MainWindow update UI fields from loaded project file
+- (4) Naive MainWindow's save and saveAs callback implementation
+- MainWindow update UI fields from loaded project file
 - Improve Project API documentation
 - Implement generator filename save and load to fix failing test
