--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-15 (18 Mai. 2023 - ???) SLOC ?,???
-- (6) eudcat prints  version from cmake-generated config.h
+- (7) MainWindow's save callback call ProjectFile::save
+- eudcat prints version from cmake-generated config.h
 - Add empty eudcat tool binary
 - Naive MainWindow's save and saveAs callback implementation
 - MainWindow update UI fields from loaded project file
