--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-17 (14 Jun. 2023 - ???) SLOC ?,???
-- (2) Improve eudcat API documentation
+- (3) Improve README formatting
+- Improve eudcat API documentation
 - Save and load callNpm boolean using an int cast
