--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-17 (14 Jun. 2023 - ???) SLOC ?,???
-- (3) Improve README formatting
+- (4) Add fox as libelecrud-file depencendies trying to fix github CI
+- Improve README formatting
 - Improve eudcat API documentation
 - Save and load callNpm boolean using an int cast
