eudcat's StartupOptions is now a class

--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-17 (14 Jun. 2023 - ???) SLOC ?,???
-- (4) Add fox as libelecrud-file depencendies trying to fix github CI
+- (5) eudcat's StartupOptions is now a class
+- Add fox as libelecrud-file depencendies trying to fix github CI
 - Improve README formatting
 - Improve eudcat API documentation
 - Save and load callNpm boolean using an int cast
