--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-17 (14 Jun. 2023 - ???) SLOC ?,???
-- (7) Add a StartupOptions unit test to check for consume()
+- (8) Fix consule first test and use it for eudcat argv
+- Add a StartupOptions unit test to check for consume()
 - Upgrade Doxygen file and several API documentation blocks
 - eudcat's StartupOptions is now a class
 - Add fox as libelecrud-file depencendies trying to fix github CI
