--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.2-17 (14 Jun. 2023 - 18 Jun. 2023) SLOC 2,179
+- Fix consule first test and use it for eudcat argv
+- Add a StartupOptions unit test to check for consume()
+- Upgrade Doxygen file and several API documentation blocks
+- eudcat's StartupOptions is now a class
+- Add fox as libelecrud-file depencendies trying to fix github CI
+- Improve README formatting
+- Improve eudcat API documentation
+- Save and load callNpm boolean using an int cast
+
 * v0.0.2-16 (14 Jun. 2023 - ???) SLOC 2,015
 - Create a basic StartupOptions struct
 - eudcat: Feed a std::list with argc and test it
