--- a/TODO
+++ b/TODO
@@ -8,4 +8,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-18 (18 Jun. 2023 - ???) SLOC ?,???
-- (1) Implement eudcat's help option consume body
+- (2) eudcat: better usage and all option handling
+- Implement eudcat's help option consume body
