Improve documentation main page and fix some undocumented members

--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-19 (22 Nov. 2023 - ???) SLOC ?,???
-- (2) Slightly improve API documentation
+- (3) Improve documentation main page and fix some undocumented members
+- Slightly improve API documentation
 - eudcat shows all ProjectFile fields
