--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-19 (22 Nov. 2023 - ???) SLOC ?,???
-- (7) Add a new eudcat unit test for spurious incompatible arguments issue
+- (8) Change eudcat's -s option and fix main call unit test
+- Add a new eudcat unit test for spurious incompatible arguments issue
 - Improve StartupOptions implementation documentation
 - Start to add bootstrap-based sidebar to app
 - Close a eudcat-related ROADMAP section
