--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.2-19 (22 Nov. 2023 - 06 Feb. 2024) SLOC 2,422
+- Change eudcat's -s option and fix main call unit test
+- Add a new eudcat unit test for spurious incompatible arguments issue
+- Improve StartupOptions implementation documentation
+- Start to add bootstrap-based sidebar to app
+- Close a eudcat-related ROADMAP section
+- Improve documentation main page and fix some undocumented members
+- Slightly improve API documentation
+- eudcat shows all ProjectFile fields
+
 * v0.0.2-18 (18 Jun. 2023 - 22 Nov. 2023) SLOC 2,322
 - Add -s,--set to eudcat listed options in usage
 - Fix remaining eudcat main unit test
