--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-20 (06 Feb. 2024 - ???) SLOC ?,???
-- (2) Add a couple of IncompatibleArguments wat member unit tests
+- (3) Add very simple StartupOptionBool header skeleton
+- Add a couple of IncompatibleArguments wat member unit tests
 - Move eudcat's IncompatibleArguments class in their own files
